calendar alignment fixed

--- a/client/src/components/Calendar/Calendar.css
+++ b/client/src/components/Calendar/Calendar.css
@@ -2,6 +2,11 @@
     border: solid white;
     padding: 10px;
     box-shadow: 5px 10px #e53935 ;
+    max-width: 325px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .react-calendar__navigation__arrow {
@@ -9,7 +14,6 @@
 }
 
 .react-calendar__tile {
-    /* height: 30px; */
     font-size: large;
 }
 
